<resources>
    <string name="app_name">Hackathon</string>
    <string name="log_in">Se connecter</string>
    <string name="sign_up">S\'enregistrer</string>
    <string name="validate">Valider</string>
    <string name="back">Retour</string>
    <string name="error">Erreur</string>
    <string name="wrongPassword">Tu n\'as pas entré un bon mot de passe (8 charactères dont 1 minuscule, 1 majuscule et 1 chiffre)</string>
    <string name="wrongEmail">Tu n\'as pas entrer un bon email</string>
    <string name="notSurname">Vous devez entrer un nom de famille</string>
    <string name="notPassword">Vous devez entrer un mot de passe</string>
    <string name="notConfPassword">Vous devez entrer la confirmation de mot de passe</string>
    <string name="notGoodConfPassword">Vous n\'avez pas entrer le même mot de passe</string>
    <string name="notName">Vous devez entrer un prénom</string>
    <string name="notKey">Vous devez entrer la clé de confirmation</string>
    <string name="notGoodKey">Vous n\'avez pas entré la bonne clé de confirmation</string>
    <string name="notInfo">Vous devez rentrer tous les champs</string>
    <string name="notEmail">Vous avez besoin d\'entrer un email</string>
    <string name="name">Prénom :</string>
    <string name="surname">Nom :</string>
    <string name="email">Email :</string>
    <string name="password">Mot De Passe :</string>
    <string name="key">Clef d\'entrée :</string>
    <string name="confPassword">Confirmation \n Mot De Passe :</string>
    <string name="resetPassword">Mot de Passe oublié ?</string>
    <string name="changePassword">Modifier Mot de Passe</string>
    <string name="resetbyEmail">Envoyer mon nouveau mot de passe</string>
    <string name="resetPage">Réinitialiser votre mot de passe</string>
    <string name="indicationMdp">Modification via lien email</string>
    <string name="logout">Se déconnecter</string>
    <string name="unsubscribe">Se désincrire</string>
    <string name="setting">Paramètres</string>
    <string name="aboutUs">A propos</string>
    <string name="aboutUsText">Application créée lors du projet Hackathon au sein de l\'école ISEN Toulon. Conçu par Lisa Duterte, Alicia Lan et Clélia Gimond</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="emailSent">"Email envoyé"</string>
    <string name="error_log_in">Mauvais email ou mot de passe</string>
    <string name="welcomeUser">Bienvenue</string>
    <string name="no_answer">Non</string>
    <string name="yes_answer">Oui</string>
    <string name="dialogue_message_unsubscribe">Êtes-vous sûr de vouloir quitter notre application ?</string>
    <string name="account_deleted">Compte supprimé</string>
    <string name="map">Map</string>
    <string name="historique">Historique</string>
    <string name="statistique">Statistiques</string>
    <string name="MapDrone">Map Drone</string>
    <string name="position_drone">Position actuelle du drone : </string>
    <string name="mois">"Mois"</string>
    <string name="detections">"Nombre de sources de chaleur détectées"</string>
    <string name="janvier">Janvier</string>
    <string name="fevrier">Fevrier</string>
    <string name="mars">Mars</string>
    <string name="avril">Avril</string>
    <string name="mai">Mai</string>
    <string name="juin">Juin</string>
    <string name="juillet">Juillet</string>
    <string name="aout">Aout</string>
    <string name="septembre">Septembre</string>
    <string name="octobre">Octobre</string>
    <string name="novembre">Novembre</string>
    <string name="decembre">Decembre</string>

</resources>